Modify build.gradle to tweak output JAR file name

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ application {
 shadowJar {
     archiveBaseName = "gray"
     archiveClassifier = null
+    archiveFileName = "gray.jar"
 }
 
 run{
